agregado validacion hubicacion al dejar presente

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhZRedZ6WSOYWkQK30aJ-kGUb2F9_51w0&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhZRedZ6WSOYWkQK30aJ-kGUb2F9_51w0&libraries=geometry,places"></script>
 
 </head>
 
